<resources>
    <string name="app_name">钱滚翻</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">钱滚翻</string>
    <string name="title_activity_list_product">ListProductActivity</string>
    <string name="list_product_imageview_content">产品图标</string>
    <string name="title_activity_splash_screen">钱滚翻</string>
    <string name="title_activity_person_info">PersonInfoActivity</string>
    <string name="settings">个人设置</string>
    <string name="welcome_btn">开始体验钱滚翻</string>
    <string name="title_property">我的资产</string>
    <string name="overall_property">总资产</string>
    <string name="overall_property_value">1200万</string>
    <string name="overall_property_bank_value">共11张银行卡</string>
    <string name="overall_property_bank">我的银行卡</string>
    <string name="overall_property_house_value">自有住房2套</string>
    <string name="overall_property_house">固定资产</string>
    <string name="overall_property_car_value">共2辆车辆</string>
    <string name="overall_property_car">自有车辆</string>
    <string name="overall_property_add">自定义添加</string>
    <string name="title_risktesting">风险测试</string>
    <string name="title_risktesting_job">您的职业</string>
    <string name="title_risktesting_knowledge">您对投资的了解程度</string>
    <string name="title_risktesting_family">您的家庭负担</string>
    <string name="title_risktesting_house">您的置业情况</string>
    <string name="title_risktesting_experience">您的投资经验</string>
    <string name="title_risktesting_age">您的年龄</string>
    <string name="title_risktesting_tolerance">一年可承受的亏损度</string>
    <string name="title_risktesting_firstfactor">投资的首要考虑因素</string>
    <string name="title_risktesting_archivement">您过去的投资绩效</string>
    <string name="title_risktesting_lost_mentalstate">如果投资损失了您的心里状态</string>
    <string name="title_risktesting_main_invest">您的主要投资</string>
    <string name="title_risktesting_refuse_investtools">未来避免的投资工具</string>
    <string name="title_risktesting_begin_button">开始测试</string>
    <string name="title_product_detail">产品详情</string>
    <string name="product_detail_productname">乾元—尊享型2013年第12期理财产品(55天)</string>
    <string name="product_detail_profit_value">6%</string>
    <string name="product_detail_profit_key">预期年化收益</string>
    <string name="product_detail_start_value">10万</string>
    <string name="product_detail_start_key">起购金额</string>
    <string name="product_detail_invest_duration_value">24个月</string>
    <string name="product_detail_invest_duration_key">投资期限</string>
    <string name="product_detail_saledate_value">2013年11月11日至2013年12月10日</string>
    <string name="product_detail_saledate_key">发售日期</string>
    <string name="product_detail_profitdate_value">2013年12月11日至2015年12月10日</string>
    <string name="product_detail_profitdate_key">计息日期</string>
    <string name="product_detail_btn_add_collection">加入收藏</string>
    <string name="product_detail_btn_dail">电话咨询</string>
    <string name="product_detail_btn_nearby">附近网点</string>
    <string name="product_detail_same_product_title">相似产品</string>
    <string name="product_detail_sellstatus_title">发售状态</string>
    <string name="product_detail_sellstatus_value">在售</string>
    <string name="product_detail_billtype_title">投资币种</string>
    <string name="product_detail_billtype_value">人民币</string>
    <string name="product_detail_investtpye_title">投资类型</string>
    <string name="product_detail_investtype_value">投资类型</string>
    <string name="product_detail_riskgrade_title">风险评级</string>
    <string name="product_detail_flowgrade_title">流动性评级</string>
    <string name="person_bank_card">我的银行卡</string>
    <string name="person_bank_card_value">工商银行</string>
    <string name="person_account">常晓静</string>
    <string name="person_account_value">xiaojing@QQ.com</string>
    <string name="person_infomation">我的资料</string>
    <string name="person_photograph">我的相册</string>
    <string name="person_infomation_sex_key">性别：女</string>
    <string name="person_infomation_email">邮箱:xiaojing@QQ.com</string>
    <string name="person_infomation_mobile">手机号：18511697605</string>
    <string name="person_infomation_city">所在城市:北京</string>
    <string name="person_privacy">安全与隐私</string>
    <string name="person_message">消息通知</string>
    <string name="person_assistant">辅助功能</string>
    <string name="person_about">关于</string>
    <string name="person_blank"></string>
    <string name="config_username">辛海涛</string>
    <string name="config_username_gender">先生</string>
    <string name="config_scope_label">综合指数</string>
    <string name="config_scope_value">75分</string>
    <string name="config_tolerance">风险承受力</string>
    <string name="config_tolerance_grade">较高</string>
    <string name="config_preference">投资偏好</string>
    <string name="config_preference_value">稳健型</string>
    <string name="config_wealthtype">财富类型</string>
    <string name="config_wealthtype_value">低净值</string>
    <string name="config_investor_desc">投资者描述</string>
    <string name="config_investor_desc_content">投资者描述：青年男士，事业有成家庭幸福，有房有车，收入稳定，无房贷压力，可用于投资的财富相对宽松，有一定投资经验。专家建议可选用银行理财产品，基金类产品进行周期性投资实现长期财富增值。</string>
    <string name="config_consultant">王经理，私人金融顾问</string>
    <string name="config_consultant_titles">智通财富认证投资理财师</string>
    <string name="config_consultant_contactme">联系Ta</string>
    <string name="config_assets_deploy">资产配置建议（仅供参考）</string>
    <string name="config_assets_deploy_remark">（仅供参考）</string>
    <string name="config_assets_objective">理财目标</string>
    <string name="config_invest_combination">投资组合（推荐）</string>
    <string name="config_invest_combination_suggest">（推荐）</string>
    <string name="config_recycle_duration">循环周期</string>
    <string name="config_invest_money">投资金额</string>
    <string name="config_invest_period">投资期限</string>
    <string name="config_invest_bank">开户机构</string>
    <string name="config_invest_advise">投资建议</string>
    <string name="cal_house">房贷</string>
    <string name="cal_merchant">商贷</string>
    <string name="cal_publicfund">公积金贷</string>
    <string name="cal_persontax">个税</string>
    <string name="new_a_title">外媒称中国RQFII配额在伦敦基金界遇冷</string>
    <string name="new_a_abstract">英国财政大臣乔治在北京向全球媒体宣布</string>
    <string name="new_b_title">互联网货基将上演龙虎斗</string>
    <string name="new_b_abstract">微信版余额宝有望年内上线</string>
    <string name="new_c_title">49岁杨明辉任华夏基金董事长</string>
    <string name="new_c_abstract">华夏基金管理公司董事长正式换帅</string>
    <string name="new_d_title">60只股基青睐伊利股份</string>
    <string name="new_d_abstract">六成股基首席重仓股四季度以来跑输大盘</string>
    <string name="new_e_title">180只股基重仓股次季领涨</string>
    <string name="new_e_abstract">震荡市下，基金选股成为业绩比拼制胜关键</string>
    <string name="new_f_title">国金证券布局六大主题基金</string>
    <string name="new_f_abstract">深化改革促动市场 布局六大主题基金</string>
    <string name="new_g_title">华商价值共享</string>
    <string name="new_g_abstract">华商基金-进可攻退可守的基金</string>
    <string name="menu_bottom_1">每日推荐</string>
    <string name="menu_bottom_2">资产配置</string>
    <string name="menu_bottom_3">金融超市</string>
    <string name="menu_bottom_4">我的收藏</string>
    <string name="menu_more">菜单4</string>
    <string name="title_activity_calculator">CalculatorActivity</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="fore">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="jia">+</string>
    <string name="jian">-</string>
    <string name="cheng">*</string>
    <string name="chu">/</string>
    <string name="dengyu">=</string>
    <string name="zhengfu">+/-</string>
    <string name="dihao">.</string>
    <string name="ping">x²</string>
    <string name="kai">√x</string>
    <string name="shanchu">ce</string>
    <string name="shan">c</string>
    <string name="title_activity_property">PropertyActivity</string>
    <string name="title_activity_risk_testing">RiskTestingActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_mapview">MapviewActivity</string>
    <string name="title_activity_property_config">PropertyConfigActivity</string>
    <string name="title_activity_circle">CircleActivity</string>
    <string name="title_activity_recommend">RecommendActivity</string>
    <string name="title_activity_caculator">CaculatorActivity</string>
    <string name="title_activity_cal">CalActivity</string>
    <string name="title_activity_news">NewsActivity</string>
    <string-array name="menu_top_1">
        <item>不限</item>
        <item>中国工商银行</item>
        <item>中国农业银行</item>
        <item>中国银行</item>
        <item>中国建设银行</item>
        <item>交通银行</item>
        <item>中信银行</item>
        <item>中国光大银行</item>
        <item>华夏银行</item>
        <item>广发银行</item>
        <item>招商银行</item>
        <item>民生银行</item>
        <item>上海浦东发展银行</item>
    </string-array>
    <string-array name="menu_top_2">
        <item>不限</item>
        <item>5万以内</item>
        <item>5&#8211;10万</item>
        <item>10&#8211;50万</item>
        <item>50&#8211;100万</item>
        <item>100万以上</item>
    </string-array>
    <string-array name="menu_top_3">
        <item>不限</item>
        <item>保本固定收益</item>
        <item>保本浮动收益</item>
        <item>非保本浮动收益</item>
    </string-array>
    <string-array name="menu_top_4">
        <item>不限</item>
        <item>3个月以内</item>
        <item>3&#8211;6个月</item>
        <item>6&#8211;12个月</item>
        <item>12&#8211;24个月</item>
        <item>24个月以上</item>
    </string-array>
    <string name="dialogTitle">联系理财经理</string>
    <string name="dialog_personname">李璐璐</string>
    <string name="dialog_personname1">认证理财师</string>
    <string name="dialog_address">中信银行北京海淀支行</string>
    <string name="dialog_bankno_key">银行工号：</string>
    <string name="dialog_bankno_value">ZX010200101</string>
    <string name="dialog_congye_key">从业年限：</string>
    <string name="dialog_congye_value">3年</string>
    <string name="dialog_dept_key">所属部门：</string>
    <string name="dialog_dept_value">电话银行中心</string>
    <string name="dialog_goodat_key">擅长领域：</string>
    <string name="dialog_goodat_value">银行卡,保险,电子银行,房产投资,\n证券,黄金,外汇,基金,受托理财</string>
    <string name="dialog_btn_1">隐私电话通信</string>
    <string name="dialog_btn_2">隐私短信留言</string>
    <string name="dialog_btn_3">在线沟通</string>
    <string name="dialog_btn_4">离线留言</string>
    <string name="contackmanager">联系理财经理</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="title_activity_collection">CollectionActivity</string>
    <string name="title_activity_product_analyse">ProductAnalyseActivity</string>
    <string-array name="radar_array_key">
        <item>指标1</item>
        <item>指标2</item>
        <item>指标3</item>
        <item>指标4</item>
        <item>指标5</item>
        <item>指标6</item>
    </string-array>
    <string-array name="radar_array_value">
        <item>6</item>
        <item>8</item>
        <item>4</item>
        <item>6</item>
        <item>5</item>
        <item>7</item>
    </string-array>
    <string name="risktest">客户风险评价</string>
    <string name="title_activity_invest_advise">InvestAdviseActivity</string>
	<string name="investadvise_licaishi">李经理，私人金融顾问</string>
	<string name="investadvise_licaishi_2">智通财富认证投资理财师</string>
	<string name="facebook">个人设置</string>
    <string name="twitter">我的资产</string>
    <string name="google">风险评估</string>
    <string name="linkedin">资产配置</string>
    <string name="wordpress">金融超市</string>
    <string name="myspace">理财资讯</string>
    <string name="logo">钱滚翻</string>
    <string name="logo_sub">循环投资理财专家</string>
</resources>