<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/actionbar_layout"
    android:layout_width="match_parent"
    android:layout_height="48dip"
    android:background="@drawable/top_background"
    android:gravity="fill_horizontal"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/top_l1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_centerVertical="true"
        android:layout_gravity="left"
        android:layout_marginLeft="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/top_l1" />
    
    <ImageView
        android:id="@+id/top_l2"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_gravity="left"
        android:layout_marginLeft="8dp"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/top_l1"
        android:contentDescription="@string/app_name"
        android:src="@drawable/top_l2" />
    
    <ImageView
        android:id="@+id/top_l3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="left"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@id/top_l2"
        android:contentDescription="@string/app_name"
        android:layout_centerVertical="true"
        android:src="@drawable/top_l3" />

    <LinearLayout 
        android:id="@+id/title_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:padding="5dp"
        android:orientation="horizontal"
        android:background="@drawable/layout_clickable_bg_4"
        >
	    <TextView
	        android:id="@+id/title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:gravity="center"
	        android:text="@string/title_activity_main"
	        android:textColor="#FFFFFF"
	        android:textSize="20sp" >
	    </TextView>

    </LinearLayout>
	 <ImageView
        android:id="@+id/loginaction"
        android:layout_width="32dp"
   		android:layout_height="32dp"
   		android:layout_centerVertical="true"
        android:adjustViewBounds="true"
        android:src="@drawable/top_r1"
        android:contentDescription="@string/settings" 
        android:layout_alignParentRight="true"
        android:paddingRight="8dp"
         />
</RelativeLayout>